fix fixed height navbar collapse to auto height

--- a/src/static/css/style.scss
+++ b/src/static/css/style.scss
@@ -74,7 +74,9 @@ body {
 }
 
 .navbar {
-    height:85px;
+    // min-height: 85px;
+    text-transform: uppercase;
+    // height:85px;
     width:100vw;
     max-width: 100vw;
 }
@@ -253,10 +255,7 @@ a:hover , .nav-link:hover {
     max-height:60px;;
 }
 
-.navbar {
-    min-height: 80px;
-    text-transform: uppercase;
-}
+
 
 
 .text-responsive-h1 {
